--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings":{
+    "DefaultConnection":"Server=localhost;Database=doanki3;User=root;Password=;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
